{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 16,
  "lineage": "13a66783-8981-5505-91e1-0d3d25d8f88c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:listener/app/Appl-load-bal/c2fe2f9edda61c7f/e22d843f8d082b96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712749369:listener/app/Appl-load-bal/c2fe2f9edda61c7f/e22d843f8d082b96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:loadbalancer/app/Appl-load-bal/c2fe2f9edda61c7f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.alb_target_grp",
            "aws_lb.applb_01",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
            "arn_suffix": "targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-Target-Grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903-20240625070223139300000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
            "target_id": "i-082ed6cddb59cecc8"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_grp",
            "aws_instance.webserver01",
            "aws_security_group.sg_for_webserver",
            "aws_subnet.public_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tg_attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903-20240625070219733700000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:targetgroup/ALB-Target-Grp/fcce69c8e3ee2903",
            "target_id": "i-06ba50ecd255970a8"
          },
          "dependencies": [
            "aws_alb_target_group.alb_target_grp",
            "aws_instance.webserver02",
            "aws_subnet.private_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:route-table/rtb-09e06042a7d7d660d",
            "default_route_table_id": "rtb-09e06042a7d7d660d",
            "id": "rtb-09e06042a7d7d660d",
            "owner_id": "339712749369",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03190d621210b1ca5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_rt",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eaf7c3456e7b5b68",
            "arn": "arn:aws:ec2:us-east-1:339712749369:instance/i-082ed6cddb59cecc8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082ed6cddb59cecc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Linux_serverKeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0869731ad90e8c290",
            "private_dns": "ip-10-10-1-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.206",
            "public_ip": "18.208.229.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f72771f4cd8e7d81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f47078bb26d1fee5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c2faef148ee109a",
            "tags": {
              "Name": "TFWebServer01"
            },
            "tags_all": {
              "Name": "TFWebServer01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f47078bb26d1fee5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_for_webserver",
            "aws_subnet.public_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eaf7c3456e7b5b68",
            "arn": "arn:aws:ec2:us-east-1:339712749369:instance/i-06ba50ecd255970a8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ba50ecd255970a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Linux_serverKeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bd3260d665403c4",
            "private_dns": "ip-10-10-2-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0070a234791af5acc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0424385801897477a",
            "tags": {
              "Name": "TFWebServer02"
            },
            "tags_all": {
              "Name": "TFWebServer02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0995e97801f735e50"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:internet-gateway/igw-03190d621210b1ca5",
            "id": "igw-03190d621210b1ca5",
            "owner_id": "339712749369",
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "applb_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712749369:loadbalancer/app/Appl-load-bal/c2fe2f9edda61c7f",
            "arn_suffix": "app/Appl-load-bal/c2fe2f9edda61c7f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Appl-load-bal-1727157107.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712749369:loadbalancer/app/Appl-load-bal/c2fe2f9edda61c7f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Appl-load-bal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0995e97801f735e50"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0424385801897477a"
              },
              {
                "subnet_id": "subnet-08c2faef148ee109a"
              }
            ],
            "subnets": [
              "subnet-0424385801897477a",
              "subnet-08c2faef148ee109a"
            ],
            "vpc_id": "vpc-0274363b4c711fb67",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:route-table/rtb-0719730c9a7f93da4",
            "id": "rtb-0719730c9a7f93da4",
            "owner_id": "339712749369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_private"
            },
            "tags_all": {
              "Name": "route_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf2bcd70ce763e5f",
            "route_table_id": "rtb-0719730c9a7f93da4",
            "subnet_id": "subnet-0424385801897477a"
          },
          "dependencies": [
            "aws_route_table.route_private",
            "aws_subnet.private_subnet",
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:security-group/sg-0f47078bb26d1fee5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f47078bb26d1fee5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_webserver",
            "name_prefix": "",
            "owner_id": "339712749369",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:subnet/subnet-0424385801897477a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0424385801897477a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712749369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:subnet/subnet-08c2faef148ee109a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2faef148ee109a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712749369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-0274363b4c711fb67"
          },
          "dependencies": [
            "aws_vpc.tfvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712749369:vpc/vpc-0274363b4c711fb67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06ba9d42af132fdbb",
            "default_route_table_id": "rtb-09e06042a7d7d660d",
            "default_security_group_id": "sg-0995e97801f735e50",
            "dhcp_options_id": "dopt-02c1de11e24b8a55e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0274363b4c711fb67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e06042a7d7d660d",
            "owner_id": "339712749369",
            "tags": {
              "Name": "TFVPC01"
            },
            "tags_all": {
              "Name": "TFVPC01"
            }
          }
        }
      ]
    }
  ]
}